# rust-url-shortener

./: .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml  db.sqlite  rustfmt.toml
db/migrations/: 01_init_table.sql  02_cleanup_expired_routes.sql  03_sanity_sylvie_url.sql
src/: main.rs
static/css/: style.css
static/fonts/: VCR-OSD-Mono.eot
static/js/: script.js
templates/: error.html.tera  index.html.tera
